--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog - Vallejo Public Library</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -20,6 +21,11 @@
     <main>
         <section>
             <h2>Catalog</h2>
+            <form action="#" method="get">
+                <label for="search">Search for a book:</label>
+                <input type="text" id="search" name="search" placeholder="Enter book title or author" required>
+                <button type="submit">Search</button>
+            </form>
             <ul>
                 <li><a href="book1.html">Book Title 1</a></li>
                 <li><a href="book2.html">Book Title 2</a></li>
