--- a/catalog.html
+++ b/catalog.html
@@ -26,11 +26,10 @@
                 <input type="text" id="search" name="search" placeholder="Enter book title or author" required>
                 <button type="submit">Search</button>
             </form>
-            <ul>
+            <ul class="catalog-list">
                 <li><a href="book1.html">Book Title 1</a></li>
                 <li><a href="book2.html">Book Title 2</a></li>
                 <li><a href="book3.html">Book Title 3</a></li>
-                <!-- Add more book links as needed -->
             </ul>
         </section>
     </main>
