--- a/library_card.html
+++ b/library_card.html
@@ -23,13 +23,17 @@
             <h2>Get a Library Card</h2>
             <form action="/submit_library_card" method="post">
                 <label for="name">Full Name:</label>
-                <input type="text" id="name" name="name" required><br>
+                <input type="text" id="name" name="name" required>
+
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required><br>
+                <input type="email" id="email" name="email" required>
+
                 <label for="address">Address:</label>
-                <input type="text" id="address" name="address" required><br>
+                <input type="text" id="address" name="address" required>
+
                 <label for="phone">Phone Number:</label>
-                <input type="tel" id="phone" name="phone" required><br>
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" placeholder="10-digit phone number" required>
+
                 <button type="submit">Submit</button>
             </form>
         </section>
